tacview/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - api.tacview.anrop.se
      - tacview.anrop.se
      secretName: tacview-tls
  rules:
    - host: api.tacview.anrop.se
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api
              port:
                number: 8080
    - host: tacview.anrop.se
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 8080
